Added dark theme option

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
 {% block main %}
 
     <blockquote class="blockquote">
-        <h3 class="mb-0">Encrypter web version</h3>
+        <h3 class="mb-0 {% if dark_theme %} text-light {% endif %}">Encrypter web version</h3>
         <footer class="blockquote-footer">By Shangru Li</footer>
     </blockquote>
 
