Update to version 1.0.1
Minor front-end fix

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,8 +9,16 @@
         <footer class="blockquote-footer">By <a href="https://www.shangruli.com/">Shangru Li</a></footer>
     </blockquote>
 
-    <div id="changelog" class="dynamic-text-color">
-        <h3 class="border-bottom">Changelog</h3>
+    <div id="changelog" class="dynamic-text-color pt-5">
+        <h3 class="border-bottom pb-2">Changelog</h3>
+            <div id="v101">
+            <h5>Version 1.0.1 <small class="text-muted">(10/10/2020)</small></h5>
+            <ul>
+                <li>
+                    Minor front-end fix.
+                </li>
+            </ul>
+        </div>
         <div id="v100">
             <h5>Version 1.0.0 <small class="text-muted">(10/09/2020)</small></h5>
             <ul>
