Updated to version 1.0.2
Removed local ED.py, importing this file remotely using httpimport

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,29 +4,37 @@
 
 {% block main %}
 
-    <blockquote class="blockquote">
-        <h1 class="mb-0 dynamic-text-color">Encrypter web version</h1>
-        <footer class="blockquote-footer">By <a href="https://www.shangruli.com/">Shangru Li</a></footer>
-    </blockquote>
+<blockquote class="blockquote">
+    <h1 class="mb-0 dynamic-text-color">Encrypter web version</h1>
+    <footer class="blockquote-footer">By <a href="https://www.shangruli.com/">Shangru Li</a></footer>
+</blockquote>
 
-    <div id="changelog" class="dynamic-text-color pt-5">
-        <h3 class="border-bottom pb-2">Changelog</h3>
-            <div id="v101">
-            <h5>Version 1.0.1 <small class="text-muted">(10/10/2020)</small></h5>
-            <ul>
-                <li>
-                    Minor front-end fix.
-                </li>
-            </ul>
-        </div>
-        <div id="v100">
-            <h5>Version 1.0.0 <small class="text-muted">(10/09/2020)</small></h5>
-            <ul>
-                <li>
-                    Initial release.
-                </li>
-            </ul>
-        </div>
+<div id="changelog" class="dynamic-text-color pt-5">
+    <h3 class="border-bottom pb-2">Changelog</h3>
+    <div id="v102">
+        <h5>Version 1.0.2 <small class="text-muted">(11/22/2020)</small></h5>
+        <ul>
+            <li>
+                Remotely importing back-end script from GitHub(https://github.com/MaxsLi/Encrypter).
+            </li>
+        </ul>
     </div>
+    <div id="v101">
+        <h5>Version 1.0.1 <small class="text-muted">(10/10/2020)</small></h5>
+        <ul>
+            <li>
+                Minor front-end fix.
+            </li>
+        </ul>
+    </div>
+    <div id="v100">
+        <h5>Version 1.0.0 <small class="text-muted">(10/09/2020)</small></h5>
+        <ul>
+            <li>
+                Initial release.
+            </li>
+        </ul>
+    </div>
+</div>
 
 {% endblock %}
