--- a/templates/base.html
+++ b/templates/base.html
@@ -18,48 +18,47 @@
 </head>
 
 <body {% if dark_theme %} style="background: #212121" {% endif %}>
-
-<!-- Navigation bar -->
-<header class="navbar navbar-expand sticky-top {% if dark_theme %} navbar-dark bg-dark {% else %} navbar-light bg-light {% endif %}">
-    <a class="navbar-brand" href="{{ url_for('index') }}">Home</a>
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('about') }}">About</a>
-        </li>
-    </ul>
-    <form method="post" class="ml-auto">
-        {% if dark_theme %}
+    <!-- Navigation bar -->
+    <header
+        class="navbar navbar-expand sticky-top {% if dark_theme %} navbar-dark bg-dark {% else %} navbar-light bg-light {% endif %}">
+        <a class="navbar-brand" href="{{ url_for('index') }}">Home</a>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('about') }}">About</a>
+            </li>
+        </ul>
+        <form method="post" class="ml-auto">
+            {% if dark_theme %}
             <button type="submit" class="btn btn-outline-light border-0" formaction="light_theme">Light theme</button>
-        {% else %}
+            {% else %}
             <button type="submit" class="btn btn-outline-dark border-0" formaction="dark_theme">Dark theme</button>
-        {% endif %}
-    </form>
-</header>
+            {% endif %}
+        </form>
+    </header>
 
-<!-- Main block -->
-<div class="container w-75 p-5">
-    {% block main %}{% endblock %}
-</div>
+    <!-- Main block -->
+    <div class="container w-75 p-5">
+        {% block main %}{% endblock %}
+    </div>
 
-<!-- Response block -->
-<div class="container w-75 p-5">
-    {% block response %}{% endblock %}
-</div>
-
+    <!-- Response block -->
+    <div class="container w-75 p-5">
+        {% block response %}{% endblock %}
+    </div>
 </body>
 
 <style type="text/css">
     .dynamic-text-color {
-    {% if dark_theme %}
-        color: #f8f9fa !important;
-    {% endif %}
+        {% if dark_theme %}
+            color: #f8f9fa !important;
+        {% endif %}
     }
 
     .dynamic-element-color {
-    {% if dark_theme %}
-        color: #f8f9fa !important;
-        background-color: #343a40 !important;
-    {% endif %}
+        {% if dark_theme %}
+            color: #f8f9fa !important;
+            background-color: #343a40 !important;
+        {% endif %}
     }
 </style>
 
