--- a/templates/about.html
+++ b/templates/about.html
@@ -11,6 +11,14 @@
 
 <div id="changelog" class="dynamic-text-color pt-5">
     <h3 class="border-bottom pb-2">Changelog</h3>
+    <div id="v103">
+        <h5>Version 1.0.3 <small class="text-muted">(1/5/2021)</small></h5>
+        <ul>
+            <li>
+                Update to support Encrypter 3.3.
+            </li>
+        </ul>
+    </div>
     <div id="v102">
         <h5>Version 1.0.2 <small class="text-muted">(11/22/2020)</small></h5>
         <ul>
