--- a/templates/base.html
+++ b/templates/base.html
@@ -20,22 +20,27 @@
 <body {% if dark_theme %} style="background: #212121" {% endif %}>
     <!-- Navigation bar -->
     <header
-        class="navbar sticky-top {% if dark_theme %} navbar-dark bg-dark {% else %} navbar-light bg-light {% endif %}">
-        <nav class="container-fluid">
+        class="navbar navbar-expand sticky-top {% if dark_theme %} navbar-dark bg-dark {% else %} navbar-light bg-light {% endif %}">
+        <div class="container-fluid">
             <a class="navbar-brand" href="{{ url_for('index') }}">Home</a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('about') }}">About</a>
-                </li>
-            </ul>
-            <form method="post" class="ml-auto">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('about') }}">About</a>
+                    </li>
+                </ul>
+            </div>
+            <form method="post" class="form-inline">
                 {% if dark_theme %}
-                <button type="submit" class="btn btn-outline-light border-0" formaction="light_theme">Light theme</button>
+                <button type="submit" class="theme-button btn btn-outline-light border-0" formaction="light_theme">Light theme</button>
                 {% else %}
-                <button type="submit" class="btn btn-outline-dark border-0" formaction="dark_theme">Dark theme</button>
+                <button type="submit" class="theme-button btn btn-outline-dark border-0" formaction="dark_theme">Dark theme</button>
                 {% endif %}
             </form>
-        </nav>
+        </div>
     </header>
 
     <!-- Main block -->
@@ -50,6 +55,10 @@
 </body>
 
 <style type="text/css">
+    .theme-button {
+        white-space: nowrap;
+    }
+
     .dynamic-text-color {
         {% if dark_theme %}
             color: #f8f9fa !important;
