--- a/templates/index.html
+++ b/templates/index.html
@@ -8,15 +8,17 @@
 
 <!-- user input -->
 <form method="post">
-    <div class="form-group">
+    <div class="mb-3">
         <textarea type="text" class="form-control dynamic-element-color" id="input" name="input" rows="4" cols="50"
             placeholder="Enter either some text or a cypher">{{ input }}</textarea>
     </div>
-    <button type="submit" class="btn btn-outline-primary" formaction="encrypt">Encrypt</button>
-    <button type="submit" class="btn btn-outline-primary" formaction="decrypt">Decrypt</button>
-    <button type="reset" class="btn btn-outline-secondary ml-auto"
-        onclick="document.getElementById('input').textContent = '' ">Clear
-    </button>
+    <div class="mb-3">
+        <button type="submit" class="btn btn-outline-primary" formaction="encrypt">Encrypt</button>
+        <button type="submit" class="btn btn-outline-primary" formaction="decrypt">Decrypt</button>
+        <button type="reset" class="btn btn-outline-secondary ml-auto"
+            onclick="document.getElementById('input').textContent = '' ">Clear
+        </button>
+    </div>
 </form>
 
 {% endblock %}
