--- a/templates/response.html
+++ b/templates/response.html
@@ -2,12 +2,15 @@
 
 {% block response %}
 
-<div class="form-group">
+<div class="mb-3">
     <h3 class="dynamic-text-color">{{ message }}</h3>
     <textarea id="output" type="text" class="form-control dynamic-element-color" rows="4" cols="50"
         readonly>{{ response }}</textarea>
 </div>
-<button class="btn btn-outline-primary " onclick="copyText()">Copy</button>
+<div>
+    <button class="btn btn-outline-primary " onclick="copyText()">Copy</button>
+</div>
+
 
 <script type="application/javascript">
     function copyText() {
