Minor text update

--- a/templates/about.html
+++ b/templates/about.html
@@ -15,10 +15,10 @@
         <h5>Version 1.0.4 <small class="text-muted">(1/10/2021)</small></h5>
         <ul>
             <li>
-                Update to Bootstrap5.
+                Minor front-end updates.
             </li>
             <li>
-                Using npm to manage packages.
+                Minor backend optimization.
             </li>
         </ul>
     </div>
