Update to version 1.0.5
Minor visual updates

--- a/templates/about.html
+++ b/templates/about.html
@@ -11,6 +11,14 @@
 
 <div id="changelog" class="dynamic-text-color pt-5">
     <h3 class="border-bottom pb-2">Changelog</h3>
+    <div id="v105">
+        <h5>Version 1.0.5 <small class="text-muted">(1/16/2021)</small></h5>
+        <ul>
+            <li>
+                Minor visual improvements.
+            </li>
+        </ul>
+    </div>
     <div id="v104">
         <h5>Version 1.0.4 <small class="text-muted">(1/10/2021)</small></h5>
         <ul>
