--- a/templates/response.html
+++ b/templates/response.html
@@ -11,7 +11,6 @@
     <button class="btn btn-outline-primary " onclick="copyText()">Copy</button>
 </div>
 
-
 <script type="application/javascript">
     function copyText() {
         /* Get the text field */
@@ -25,5 +24,14 @@
         document.execCommand("copy");
     }
 </script>
+
+<style type="text/css">
+    #output {
+        {% if dark_theme %}
+            color: #f8f9fa !important;
+            background-color: #343a4040 !important;
+        {% endif %}
+    }
+</style>
 
 {% endblock %}
